--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <nav class="bg-white shadow-md sticky top-0 z-50">
         <div class="container mx-auto px-6 py-3 flex justify-between items-center">
             <a href="#" class="flex items-center gap-3 group">
-                <img src="logo5.png" alt="Logo Fundación ATB" class="h-16 w-auto transition transform group-hover:scale-105">
+                <img src="Logo5.jpg" alt="Logo Fundación ATB" class="h-16 w-auto transition transform group-hover:scale-105">
                 <div class="hidden md:block">
                     <span class="block text-2xl font-heading font-extrabold text-atb-dark leading-none">FUNDACIÓN ATB</span>
                     <span class="block text-xs font-semibold text-atb-light tracking-widest">COMPRENSIÓN DEL SER</span>
@@ -233,7 +233,7 @@
             <div class="flex flex-col md:flex-row justify-between gap-12 mb-12">
                 <div class="md:w-1/3">
                     <div class="flex items-center gap-3 mb-4">
-                        <img src="logo-atb.png" alt="Logo Blanco" class="h-12 w-auto brightness-200 grayscale"> 
+                        <img src="Logo5.jpg" alt="Logo Blanco" class="h-12 w-auto brightness-200 grayscale"> 
                         <span class="text-2xl font-bold font-heading">ATB</span>
                     </div>
                     <p class="text-gray-400 text-sm leading-relaxed mb-6">
@@ -275,6 +275,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
