--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="font-sans text-gray-700 smooth-scroll flex flex-col min-h-screen">
 
